# CS2890_Intelligent_Robots

./: .gitmodules  README.md
1_ros_tutorials/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
1_ros_tutorials/catkin_ws/src/beginner_tutorials/launch/: turtlemimic.launch
2_prison_break/catkin_ws/src/prison_break/: CMakeLists.txt  package.xml
2_prison_break/catkin_ws/src/prison_break/scripts/: main.py
3_ball_finder/: main.py
3_ball_finder/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
3_ball_finder/catkin_ws/devel/include/ball_finder/: BallLocation.h
3_ball_finder/catkin_ws/devel/lib/pkgconfig/: ball_finder.pc
3_ball_finder/catkin_ws/src/ball_finder/: CMakeLists.txt  package.xml
4_robot_puppy/catkin_ws/src/robot_puppy/: CMakeLists.txt  package.xml
4_robot_puppy/catkin_ws/src/robot_puppy/launch/: pup.launch
4_robot_puppy/catkin_ws/src/robot_puppy/scripts/: ball_finder.py  main.py
5_dodgeball/: pseudo.txt  pseudocode.py
5_dodgeball/catkin_ws/src/soccerbot/: package.xml
6_soccer/catkin_ws/: rviz_config.rviz
6_soccer/catkin_ws/backup/: bot_backup.py  robot_pid.py
6_soccer/catkin_ws/src/soccerbot/: CMakeLists.txt
6_soccer/catkin_ws/src/soccerbot/launch/: robot.launch
6_soccer/catkin_ws/src/soccerbot/msg/: BallMeasured.msg
6_soccer/catkin_ws/src/soccerbot/scripts/: action_manager.py  game_state.py  main.py  object_finder.py  parameter_manager.py  position_manager.py  potential_field_manager.py  pseudo.txt  robot_pid.py  soccer_bot.py  soccerbot_main.py  velocity_manager.py  visualizer.py
(+20 files in other folders)
